fix spacing issue on safari
git-svn-id: https://svn.participatoryculture.org/svn/channelguide2/branches/streaming@2207 46f2bd34-0d25-4fd3-afc4-d03ba3bd0a21

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -23,6 +23,10 @@ a:hover {color: #666; text-decoration: none;}
 img, img a, img a:hover {border: 0;}
 h1, h2, h3, h4, h5 {font-weight: normal;}
 
+form {
+    margin: 0;
+    padding: 0;
+}
 /*****************************************************
 	Structure
 ******************************************************/
@@ -937,10 +941,6 @@ ul#lowerMenu li#language.hover a, ul#lowerMenu li#account.hover a {
 	height: 300px;
         overflow: hidden;
 	background: url(images/hover_menu.png) 0 0 repeat-y;
-}
-#hoverMenuLanguage ul li {
-    position: relative;
-    top: 0;
 }
 #hoverMenuLanguage ul button {
     background: url(images/hover_menu_bg.png) 0 0 repeat-x;
